<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout style="@style/AppBar">
            <androidx.appcompat.widget.Toolbar style="@style/Toolbar"
                app:title="@string/info_title">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:text="@string/info_message"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/vButton"
            style="@style/Button.Outlined"
            android:text="@string/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textAllCaps="false" />

    </LinearLayout>

</FrameLayout>